--- a/HelloWorld/HelloWorld.xcodeproj/xcshareddata/xcschemes/FastlaneSnapshots.xcscheme
+++ b/HelloWorld/HelloWorld.xcodeproj/xcshareddata/xcschemes/FastlaneSnapshots.xcscheme
@@ -9,14 +9,14 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2C498ED324BCBC2400699419"
-               BuildableName = "HelloWorld.app"
-               BlueprintName = "HelloWorld"
+               BlueprintIdentifier = "2CF66B8724FE925000A40BF7"
+               BuildableName = "FastlaneSnapshots.xctest"
+               BlueprintName = "FastlaneSnapshots"
                ReferencedContainer = "container:HelloWorld.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -67,16 +67,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2C498ED324BCBC2400699419"
-            BuildableName = "HelloWorld.app"
-            BlueprintName = "HelloWorld"
-            ReferencedContainer = "container:HelloWorld.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
